public/css/endless.css
/*
 *                        ___
 *                       /\_ \
 *  _____     ___     ___\//\ \      __
 * /\ '__`\  / __`\  / __`\\ \ \   /'__`\
 * \ \ \_\ \/\ \_\ \/\ \_\ \\_\ \_/\  __/
 *  \ \ ,__/\ \____/\ \____//\____\ \____\
 *   \ \ \/  \/___/  \/___/ \/____/\/____/
 *    \ \_\
 *     \/_/
 *
 * Designed, built, and released under MIT license by @mdo. Learn more at
 * https://github.com/poole/poole.
 */


/*
 * Contents
 *
 * Body resets
 * Custom type
 * Messages
 * Container
 * Masthead
 * Posts and pages
 * Pagination
 * Reverse layout
 * Themes
 */


/*
 * Body resets
 *
 * Update the foundational and global aspects of the page.
 */

* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

html,
body {
    margin: 0;
    padding: 0;
    color: #515151;
    background-color: #fff;
}

html {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
    line-height: 1.3;
}
@media (min-width: 38em) {
    html {
        font-size: 18px;
        padding-top: 1rem;
    }
}

body {
    padding-top: 1rem;
    -webkit-text-size-adjust: 100%;
    -ms-text-size-adjust: 100%;
}

/* Code */
code,
pre {
    font-family: "Courier New", Menlo, Monaco, monospace;
}
code {
    padding: .1em .25em;
    font-size: 85%;
    color: #5f313a;
    -moz-border-radius:4px;
    -webkit-border-radius: 4px;
    border-radius: 4px;
    background-color: #d9d9d9;
}
code a {
    color: #3a31ff !important;
}
pre {
    -moz-border-radius:8px;
    -webkit-border-radius:8px;
    border-radius:8px;
    background-color: #222;
    display: block;
    margin-top: 0;
    margin-bottom: 1rem;
    padding: 0.3rem;
    font-size: .9rem;
    line-height: 1.4;
    white-space: pre;
    overflow: auto;
}

pre code {
    padding: 0;
    font-size: 100%;
    color: inherit;
    background-color: transparent;
}

/* No `:visited` state is required by default (browsers will use `a`) */
a {
    color: #3a3199;
    /* color: #134bb2; */
    text-decoration: none;
}
a strong {
    color: inherit;
}
/* `:focus` is linked to `:hover` for basic accessibility */
a:hover,
a:focus {
    text-decoration: underline;
}

/* Headings */
h1, h2, h3, h4, h5, h6 {
    margin-bottom: .5rem;
    font-weight: bold;
    line-height: 1.25;
    color: #313131;
    text-rendering: optimizeLegibility;
}
h1 {
    font-size: 1.7rem;
}
.posts h1 {
    font-size: 1.5rem;
}

.post-with-comments h2 {
    margin-top: 1.7rem;
    font-size: 1.25rem;
}

.post-with-comments h3, 
.post-with-comments h4, 
.post-with-comments h5, 
.post-with-comments h6 {
    margin-top: 1rem;
    font-size: 1rem;
}

/* Body text */
p {
    margin-top: 0;
    margin-bottom: 1rem;
}

strong {
    color: #303030;
}


/* Lists */
ul, ol, dl {
    margin-top: 0;
    margin-bottom: 1rem;
}

dt {
    font-weight: bold;
}
dd {
    margin-bottom: .5rem;
}

/* Misc */
hr {
    position: relative;
    margin: 1.5rem 0;
    border: 1px solid #000;
    margin-bottom: .5em;
    /* border-top: 1px solid #eee; */
    /* border-bottom: 1px solid #fff; */
}

abbr {
    font-size: 85%;
    font-weight: bold;
    color: #555;
    text-transform: uppercase;
}
abbr[title] {
    cursor: help;
    border-bottom: 1px dotted #e5e5e5;
}

/* Pygments via Jekyll */
.highlight {
    margin-bottom: 1rem;
    border-radius: 4px;
}
.highlight pre {
    margin-bottom: 0;
}

/* Series List */
.series ul {
    /* list-style: none; */
    padding-left: 1.5em;
    margin-bottom: 0;
}
.series h4 {
    margin-top: 0;
}
.series-post {
    margin-top: .2em;
}

div.series {
    font-size: 85%;
    -moz-border-radius:8px;
    -webkit-border-radius:8px;
    border-radius:8px;
    border: 2px solid #b0c0a0;
    background-color: #d9e9c9;
    display: inline-block;
    /* margin-top: 0; */
    margin-bottom: 1rem;
    padding: 0.5rem;
}

/* Quotes */
blockquote {
    padding: .5rem 1rem;
    margin: .8rem 0;
    color: #7a7a7a;
    border-left: .25rem solid #e5e5e5;
}
blockquote p:last-child {
    margin-bottom: 0;
}
@media (min-width: 30em) {
    blockquote {
        padding-right: 5rem;
        padding-left: 1.25rem;
    }
}

img {
    display: block;
    max-width: 100%;
    margin: 0 0 1rem;
    border-radius: 5px;
}

/* Tables */
table {
    margin-bottom: 1rem;
    width: 100%;
    border: 1px solid #e5e5e5;
    border-collapse: collapse;
}
td,
th {
    padding: .25rem .5rem;
    border: 1px solid #e5e5e5;
}
tbody tr:nth-child(odd) td,
tbody tr:nth-child(odd) th {
    background-color: #f9f9f9;
}


/*
 * Custom type
 *
 * Extend paragraphs with `.lead` for larger introductory text.
 */

.lead {
    font-size: 1.25rem;
    font-weight: 300;
}


/*
 * Messages
 *
 * Show alert messages to users. You may add it to single elements like a `<p>`,
 * or to a parent if there are multiple elements to show.
 */

.message {
    margin-bottom: 1rem;
    padding: 1rem;
    color: #717171;
    background-color: #f9f9f9;
}

/*
 * Container
 *
 * Center the page content.
 */

.container {
    /* position:relative; */
    max-width: 38rem;
    padding-left: 0;
    padding-right:0;
    margin-left:  auto;
    margin-right: auto;
}

@media (min-width: 60rem) {
    .container {
        /* overflow:hidden; */
        max-width: 60rem;
    }
}

/*
 * Masthead
 *
 * Super small header above the content for site name and short description.
 */

.masthead {
    width: inherit;
    padding-bottom: 0;
    margin-bottom: 0;
    margin-left: 0.3rem;
    margin-right: 0.3rem;
}
@media (min-width: 60rem) {
    .masthead {
        margin-top:2rem;
        margin-right:18rem;
        position:fixed;
        top:0;
        right:50%;
        display:inline-block;
        width:13rem;
    }
}
.masthead-title {
    font-size: 200%;
}

ul.masthead-links {
    list-style: none;
    padding-left: 0;
}
.masthead-links li {
    width: inherit;
    margin-top:.5em;
}

.masthead-links form,
.masthead-links input {
    width: inherit;
}
.masthead-title, .masthead-tagline,
.masthead-links {
    margin-top: 0;
    margin-bottom: 0;
    color: #505050;
}

.masthead-links {
    margin-top: 1rem;
}
.masthead a {
    color: #202020;
}

.masthead small {
    vertical-align: text-top;
    font-size: 80%;
    font-weight: 400;
    color: #909090;
    letter-spacing: 0;
}

@media (max-width: 59.9em) {

    .masthead-links {
        margin-top: .3rem;
        margin-left: 0rem;
        margin-right: 0rem;
    }
    .masthead-links li {
        margin:0;
        margin-bottom:.3rem;
        text-align: center;
        font-size:100%;
        width:32%;
        display:none;
    }
    /* Only 3 links fit in mobile. */
    .masthead-links li:nth-child(1),
    .masthead-links li:nth-child(2),
    .masthead-links li:nth-child(3) {
        display:inline-block;
    }

    .pagination {
        width: 99%;
    }
}

a.author {
    text-decoration: underline;
    color: inherit;
}
a.author:hover,
a.author:focus {
    color: black;
}


/*
 * Posts and pages
 *
 * Each post is wrapped in `.post` and is used on default and post layouts. Each
 * page is wrapped in `.page` and is only used on the page layout.
 */

.post-with-comments {
    margin:.3rem;
}
@media (min-width: 60rem) {
    .post-with-comments {
        float:left;
        margin-left:14rem;
        width:38rem;
        display:inline-block;
        /* overflow:scroll; */
    }
}
.page,
.post {
    padding-left: 1em;
    padding-right: 1em;
    padding-top: .8em;
    padding-bottom: 0em;
    margin: 0;
    margin-bottom: 1em;
}

.border-box {
    color: #333;
    -moz-border-radius:6px;
    -webkit-border-radius:6px;
    box-shadow: .1rem .1rem .1rem #666;
    border:2px solid #333;
    border-radius:6px;
    background-color: #eee;
}

/* Blog post or page title */
.page-title,
.post-title,
.post-title a {
    color: #303030;
}
.page-title,
.post-title {
    margin-top: 0;
}

/* Meta data line below post title */
.post-date {
    display: block;
    margin-top: -.5rem;
    margin-bottom: 1rem;
    color: #9a9a9a;
}
.post-date .comment-link {
    float:right;
    color: #9a9a9a;
}

/* Tags */
@media (min-width: 30em) {
    .tags-line {
        float: right;
    }
}
.tag, .tag a {
    color: black;
}

/* Related posts */
.related {
    padding-top: 0rem;
    padding-bottom: 1.3rem;
    border-top: 2px solid #ddd;
}
.related-posts {
    padding-left: 0;
    list-style: none;
}

.related h3 {
    margin-top: 1em;
}
.related-posts h4 {
    margin-top: 0;
    font-weight: normal;
    font-size: 100%;
}
.related-posts li small {
    font-size: 75%;
    font-weight: bold;
    color: #999;
}

.related-posts li small .tag{
    color: black;
    font-size: 115%;
    font-weight: normal;
}
.related-posts li a:hover {
    color: #268bd2;
    text-decoration: none;
}
.related-posts li a:hover small {
    color: inherit;
}

/* Archive */
ul.archive {
    list-style: none;
    padding-left: 3em;
}
.archive li {
    padding-bottom: .6em;
}
.archive-date {
    margin-left: -2em;
    font-size: 85%;
    font-family: "Courier New", Menlo, Monaco, monospace;
    color: #666666;
}

@media (max-width: 30em) {
    ul.archive {
        padding-left: 2em;
    }
}

/*
 * Pagination
 *
 * Super lightweight (HTML-wise) blog pagination. `span`s are provide for when
 * there are no more previous or next posts to show.
 */

.pagination {
    overflow: hidden; /* clearfix */
    margin-left: auto;
    margin-right: auto;
    font-family: "PT Sans", Helvetica, Arial, sans-serif;
    color: #ccc;
    text-align: center;
    font-weight:bold;
    font-size:110%;
}

/* Pagination items can be `span`s or `a`s */
.pagination-item {
    display: block;
    padding: 1rem;
    /* border: 1px solid #eee; */
}
.pagination-item:first-child {
    margin-bottom: -1px;
}

/* Only provide a hover state for linked pagination items */
a.pagination-item:hover {
    background-color: #fff;
}

@media (max-width: 29.9em) {
    .pagination-item:last-child {
        border-top-left-radius:  0px;
        border-top-right-radius: 0px;
        margin-top:-3px;
    }
    .pagination-item:first-child {
        margin-bottom:0;
        border-bottom-left-radius:  0px;
        border-bottom-right-radius: 0px;
    }
}

@media (min-width: 30em) {
    .pagination {
        margin: 3rem 0;
    }
    .pagination-item {
        float: left;
        width: 50%;
        margin-bottom: 2px;
    }
    .pagination-item:last-child {
        margin-left: -1px;
        border-top-left-radius:    0px;
        border-bottom-left-radius: 0px;
    }
    .pagination-item:first-child {
        border-top-right-radius:    0px;
        border-bottom-right-radius: 0px;
    }
}

